# prosidy2

./: .brittany.yaml  .envrc  .ghc.environment.x86_64-linux-8.6.5  .gitattributes  .gitignore  .hlint.yaml  Makefile  README.pro  cabal.project  hie.yaml  prosidy.cabal
data/golden/comment/: input.pro  output.json
data/golden/empty-document/: output.json
data/golden/gamut/: input.pro  output.json
data/golden/invalid-utf8/: input.pro  output.json
data/golden/line-break/: input.pro  output.json
data/golden/shebang/: input.pro  output.json
doc/: index.pro  overview.pro  spec.pro  specification.pro
doc/res/: manual.css  manual.js
nix/: default.nix  nixpkgs.nix
scripts/: format
scripts/lib/: setup.sh
src/Prosidy/: Manual.hs  Markup.hs  Parse.hs  Types.hs
src/Prosidy/Compile/Internal/: Error.hs  Eval.hs  Info.hs
src/Prosidy/Internal/: Optics.hs
src/Prosidy/Manual/: Compile.hs  Slug.hs  TableOfContents.hs
src/chronicle/: chronicle.cabal
src/chronicle/System/Log/: Chronicle.hs
src/hakyll-contrib-prosidy/: hakyll-contrib-prosidy.cabal
src/hakyll-contrib-prosidy/Hakyll/Contrib/: Prosidy.hs
src/poetic/: Main.hs  poetic.cabal
src/propp/: Main.hs  propp.cabal
src/prosidy/: Prosidy.hs  prosidy.cabal
src/prosidy-internal/Prosidy/Internal/: JSON.hs
src/prosidy-manual/: Main.hs  prosidy-manual.cabal
src/prosidy-manual/Prosidy/: Manual.hs  Manual.lhs
src/prosidy-manual/Prosidy/Manual/: Compile.hs  Monad.hs  Opts.hs  Slug.hs  TableOfContents.hs
src/prosidy-markup/: Main.hs  prosidy-markup.cabal  syntax-guide.pro
src/prosidy-markup/Prosidy/: Markup.hs
src/prosidy/Prosidy/: Parse.hs  Source.hs  Types.hs
src/prosidy/Prosidy/Internal/: JSON.hs  Optics.hs
src/prosidy/test-data/golden/input/: gamut.pro  literal.pro
src/prosidy/test-data/golden/output/: gamut.golden  literal.golden
src/prosidy/test/Prosidy/: Test.hs
src/prosidy/test/Prosidy/Test/: Gen.hs  Golden.hs  Optics.hs  Serde.hs
src/prosidyc/: prosidyc.cabal
src/prosidyc/Prosidy/: Compile.hs
src/prosidyc/Prosidy/Compile/Internal/: Compile.hs  Error.hs  Eval.hs  Info.hs  Spec.hs  Util.hs
test/: Paths_prosidy.hs
test/Prosidy/: Test.hs
test/Prosidy/Test/: Prosidy.hs
vim/ftdetect/: prosidy.vim
vim/runtime/: README.md
vim/runtime/ftplugin/: prosidy.vim
vim/runtime/syntax/: prosidy.vim
vscode/: .vscodeignore  CHANGELOG.md  README.md  index.pro  language-configuration.json  package.json  vsc-extension-quickstart.md
vscode/syntaxes/: prosidy.tmLanguage.json
