cabal-version: 3.0
name:          prosidy
version:       1.3.0.0
synopsis:      A simple language for writing documents.
license:       MPL-2.0
license-file:  LICENSE
author:        James Alexander Feldman-Crough
maintainer:    alex@fldcr.com
copyright:     ©2020 to James Alexander Feldman-Crough
category:      Language
tested-with:   GHC == 8.8.1
data-dir:      data
data-files:    golden/**/*.pro, golden/**/*.json

description:   
    Prosidy is a small language for writing documents.
    More details are on its site at https://prosidy.org.

source-repository head
   type:     git
   location: https://git.fldcr.com/prosidy

flag fatal-warnings
  description: Turns all warnings into errors. Used in CI.
  default:     False
  manual:      True

-------------------------------------------------------------------------------
common prosidy-shared
  default-language: Haskell2010
  build-depends:    base >=4.12 && <5
  ghc-options:
      -Wall 
      -Wno-name-shadowing

  if flag(fatal-warnings)
      ghc-options:
          -Werror


common prosidy-shared-test
  default-language: Haskell2010
  ghc-options:
      -Wall 
      -Wno-name-shadowing
  build-depends:
      base         >=4.12 && <5
    , tasty        >=1.2  && <1.3
    , tasty-hunit  >=0.10 && <0.11
    , tasty-golden >=2.3  && <2.4

-------------------------------------------------------------------------------
library
  import:         prosidy-shared
  hs-source-dirs: src/prosidy

  exposed-modules:  
      Prosidy
    , Prosidy.Parse
    , Prosidy.Source
    , Prosidy.Types

  build-depends:
      prosidy-internal
    , aeson            ^>= 1.4
    , bytestring       ^>= 0.10
    , binary           ^>= 0.8
    , containers       ^>= 0.6
    , deepseq          ^>= 1.4
    , hashable          >= 1.2  && < 1.4
    , megaparsec        >= 7.0  && < 8.1
    , template-haskell  >= 2.14 && < 2.16
    , text             ^>= 1.2
    , transformers     ^>= 0.5
  

-------------------------------------------------------------------------------
library prosidyc
  import:         prosidy-shared
  visibility:     public
  hs-source-dirs: src/prosidyc
  
  exposed-modules:
      Prosidy.Compile

  other-modules:
      Prosidy.Compile.Internal.Compile
    , Prosidy.Compile.Internal.Error
    , Prosidy.Compile.Internal.Eval
    , Prosidy.Compile.Internal.Info
    , Prosidy.Compile.Internal.Spec
    , Prosidy.Compile.Internal.Util

  build-depends:
      prosidy-internal
    , prosidy
    , containers           ^>= 0.6
    , text                 ^>= 1.2
    , generic-lens         ^>= 1.1
    , hashable              >= 1.2  && < 1.4
    , mtl                  ^>= 2.2
    , lens                 ^>= 4.18
    , mmorph               ^>= 1.1
    , profunctors           >= 5.3 && < 5.6
    , unordered-containers ^>= 0.2


-------------------------------------------------------------------------------
executable prosidy-manual
  import:         prosidy-shared
  hs-source-dirs: src/prosidy-manual
  ghc-options:    -main-is Prosidy.Manual.main

  main-is:     
      Prosidy/Manual.hs

  other-modules:
      Prosidy.Manual.Compile
    , Prosidy.Manual.Monad
    , Prosidy.Manual.Opts
    , Prosidy.Manual.Slug
    , Prosidy.Manual.TableOfContents

  build-depends:
      prosidy
    , prosidyc
    , binary               ^>= 0.8
    , blaze-html           ^>= 0.9
    , bytestring           ^>= 0.10
    , containers           ^>= 0.6
    , deepseq              ^>= 1.4
    , filepath             ^>= 1.4
    , hashable              >= 1.2  && < 1.4
    , lens                 ^>= 4.18
    , optparse-applicative ^>= 0.15
    , shake                ^>= 0.18
    , text                 ^>= 1.2
    , transformers         ^>= 0.5
    , unordered-containers ^>= 0.2
    , vector               ^>= 0.12


-------------------------------------------------------------------------------
executable prosidy-markup
  import:         prosidy-shared
  hs-source-dirs: src/prosidy-markup
  ghc-options:    -main-is Prosidy.Markup.main

  main-is:     
      Prosidy/Markup.hs

  build-depends:
      prosidy
    , prosidyc
    , blaze-html           ^>= 0.9
    , bytestring           ^>= 0.10
    , optparse-applicative ^>= 0.15
    , text                 ^>= 1.2
    , transformers         ^>= 0.5

  
-------------------------------------------------------------------------------
test-suite prosidy-test
  import:          prosidy-shared-test
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  ghc-options:     -main-is Prosidy.Test.main

  main-is:
      Prosidy/Test.hs

  other-modules:
      Prosidy.Test.Prosidy
    , Paths_prosidy

  autogen-modules:
      Paths_prosidy

  build-depends:
      prosidy
    , aeson            ^>= 1.4
    , aeson-pretty     ^>= 0.8
    , aeson-diff       ^>= 1.1
    , bytestring       ^>= 0.10
    , directory        ^>= 1.3
    , filepath         ^>= 1.4
    , text             ^>= 1.2

-------------------------------------------------------------------------------
library prosidy-internal
  import:         prosidy-shared
  visibility:     private
  hs-source-dirs: src/prosidy-internal
 
  exposed-modules:
      Prosidy.Internal.Optics
    , Prosidy.Internal.JSON

  build-depends:
      aeson            ^>= 1.4
    , profunctors       >= 5.3 && < 5.6
    , tagged           ^>= 0.8
    , text             ^>= 1.2

