name:                  chronicle
synopsis:              A wrapper around fast-logger
author:                James Alexander Feldman-Crough
maintainer:            alex@fldcr.com
copyright:             Copyright 2020 to James Alexander Feldman-Crough
category:              System

version:               0.1.0.0

cabal-version:         >=1.10
license:               MPL-2.0
license-file:          LICENSE
build-type:            Simple

library
  default-language:    Haskell2010
  hs-source-dirs:      .
  ghc-options:         -Wall
  build-depends:       base                 >=4.12 && <4.14
                     , ansi-wl-pprint       >=0.6  && <0.7
                     , ansi-terminal        >=0.9  && <0.11
                     , fast-logger          >=2.4  && <3.1
  exposed-modules:     System.Log.Chronicle
