cabal-version:         >=1.10
name:                  hakyll-contrib-prosidy
version:               0.0.1.0
synopsis:              Hakyll compiler handling Prosidy files
license:               MPL-2.0
license-file:          LICENSE
author:                James Alexander Feldman-Crough
maintainer:            alex@fldcr.com
copyright:             Copyright 2020 to James Alexander Feldman-Crough
build-type:            Simple

library
  default-language: Haskell2010
  hs-source-dirs:  .
  exposed-modules: Hakyll.Contrib.Prosidy
  build-depends:   base        >=4.7  && <5
                 , prosidy
                 , hakyll      >=4.13 && <4.14
                 , bytestring  >=0.10 && <0.11
                 , mtl         >=2.2 && <2.3
                 , text        >=1.2 && <1.3
