name:                poetic
version:             0.1.0.0
license:             MPL-2.0
license-file:        LICENSE
author:              James Alexander Feldman-Crough
maintainer:          alex@fldcr.com
copyright:           Copyright 2020 to James Alexander Feldman-Crough
category:            Language
build-type:          Simple
cabal-version:       >=1.10
synopsis:            Prosidy pre-processor for literate source code.

executable poetic
  hs-source-dirs:      .
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , prosidy
                     , lens >=4.17 && <4.18
                     , text >=1.2 && <1.3
                     , optparse-applicative >= 0.14 && < 0.16
                     , unordered-containers >= 0.2 && < 0.3
