name:                  prosidy-manual
synopsis:              A Prosidy dialect for Prosidy's own manual
author:                James Alexander Feldman-Crough
maintainer:            alex@fldcr.com
copyright:             Copyright 2020 to James Alexander Feldman-Crough
category:              Language

version:               0.1.0.0

cabal-version:         >=1.10
license:               MPL-2.0
license-file:          LICENSE
build-type:            Simple

executable prosidy-manual
  hs-source-dirs:        .
  default-language:      Haskell2010
  ghc-options:           -pgmL propp

  main-is:               Main.hs

  other-modules:         Prosidy.Manual
                       , Prosidy.Manual.Monad

  build-tool-depends:    propp:propp

  build-depends:         base >= 4.7 && < 5
                       , prosidy
                       , prosidyc
                       , hakyll-contrib-prosidy

                       , hakyll
                       , mtl
                       , text
                       , lens
                       , blaze-markup
                       , blaze-html
                       , unordered-containers
                       , containers
                       , generic-lens
                       , directory
                       , filepath
                       , bytestring

