name:                  prosidy-markup
synopsis:              A minimal Prosidy dialect meant for Markdown-style uses.
author:                James Alexander Feldman-Crough
maintainer:            alex@fldcr.com
copyright:             Copyright 2020 to James Alexander Feldman-Crough
category:              Language
cabal-version:         >=1.10
license:               MPL-2.0
license-file:          LICENSE
build-type:            Simple
version:               0.1.0.0

executable prosidy-markup
  hs-source-dirs:        .
  default-language:      Haskell2010
  main-is:               Main.hs
  build-depends:         base >= 4.7 && < 5
                       , prosidy
                       , prosidyc
                       , blaze-html
                       , blaze-markup
                       , text
                       , lens
                       , optparse-applicative
