name:                  prosidy
synopsis:              A small language for writing text documents.
author:                James Alexander Feldman-Crough
maintainer:            alex@fldcr.com
copyright:             Copyright 2020 to James Alexander Feldman-Crough
category:              Language

version:               1.0.0.0

cabal-version:         >=1.10
license:               MPL-2.0
license-file:          LICENSE
build-type:            Simple
data-files:            test-data/golden/input/*.pro, test-data/golden/output/*.golden

library
  default-language:    Haskell2010
  hs-source-dirs:      .
  ghc-options:         -Wall
  build-depends:       base                 >=4.12 && <4.14
                     , aeson                >=1.4  && <1.5
                     , bytestring           >=0.9  && <0.11
                     , containers           >=0.6  && <0.7
                     , contravariant        >=1.5  && <1.6
                     , hashable             >=1.2  && <1.4
                     , megaparsec           >=8.0  && <8.1
                     , prettyprinter        >=1.2  && <1.6
                     , profunctors          >=5.3  && <5.6
                     , unordered-containers >=0.2  && <0.3
                     , text                 >=1.2  && <1.3
                     , tagged               >=0.8  && <0.9
                     , template-haskell     == 2.14.*
                     , transformers         >=0.5  && <0.6
  exposed-modules:     Prosidy
                     , Prosidy.Parse
                     , Prosidy.Types
                     , Prosidy.Source
  other-modules:       Prosidy.Internal.JSON
                     , Prosidy.Internal.Optics

test-suite prosidy-test
  default-language:    Haskell2010
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  main-is:             Prosidy/Test.hs
  other-modules:       Prosidy.Test.Gen
                     , Prosidy.Test.Golden
                     , Prosidy.Test.Optics
                     , Prosidy.Test.Serde
                     , Paths_prosidy
  autogen-modules:     Paths_prosidy
  build-depends:       base
                     , prosidy
                     , aeson
                     , bytestring
                     , containers
                     , unordered-containers
                     , hedgehog
                     , lens
                     , tasty
                     , tasty-golden
                     , tasty-hedgehog
                     , tasty-hspec
                     , text
